<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="enter_amount">$0.00</string>
    <string name="tip_percentage">15%</string>
    <string name="tip">Tip Total</string>
    <string name="total">Bill + Tip</string>
    <string name="tip_per_person">Per Person</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
