<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BasicFragment"
    android:columnCount="5"
    android:useDefaultMargins="true"
    android:background="@color/result_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total"
        android:id="@+id/textView14"
        android:layout_gravity="left"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1" />

    <TextView
        android:text="Bill Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/textView"
        android:layout_columnSpan="1" />


    <EditText
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/amountEditText"
        android:layout_column="1"
        android:digits="0123456789"
        android:ems="10"
        android:maxLength="6"
        android:layout_columnSpan="3"
        android:layout_row="0"
        android:gravity="center_horizontal"
        android:cursorVisible="false"
        android:background="@color/invisible"
        android:textColor="@android:color/transparent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountTextView"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:hint="@string/enter_amount"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:padding="@dimen/textview_padding"
        android:elevation="0dp"
        android:textColorLink="?android:attr/colorPrimary" />

    <EditText
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/percentTaxEditText"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:maxLength="5"
        android:layout_row="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/percentTaxTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip_percentage"
        android:id="@+id/percentTextView"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_gravity="center_vertical|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip"
        android:id="@+id/tipLabelTextView"
        android:layout_gravity="left"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="1" />

    <TextView
        android:text="Tax Included?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_row="1"
        android:layout_column="0"
        android:id="@+id/textView7"
        android:layout_columnSpan="1" />

    <TextView
        android:text="People Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_row="6"
        android:layout_column="0"
        android:id="@+id/textView10"
        android:layout_columnSpan="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/numPeopleTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnSpan="3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numPeopleEditText"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_row="6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip_per_person"
        android:id="@+id/totalLabelTextView"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="clip_horizontal" />

    <TextView
        android:text="Tip Percent (%)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_row="3"
        android:layout_column="0"
        android:id="@+id/textView15"
        tools:layout_gravity="center_vertical"
        android:layout_columnSpan="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipPerPersonTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_columnSpan="3" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchTax"
        android:layout_row="1"
        android:layout_column="2"
        android:checked="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal" />

    <SeekBar
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:id="@+id/percentSeekBar"
        android:indeterminate="false"
        android:max="30"
        android:progress="15"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:text="Tax  (%)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/textView2"
        android:layout_columnSpan="1" />


</GridLayout>
